<resources>
    <string name="app_name">expense</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="username">USERNAME</string>
    <string name="button_settings">Button Settings</string>
    <string name="latest_view">Latest View</string>
    <string name="amount">NONE</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="entertainment">NONE</string>
    <string name="latest_expense">Latest Expense</string>
    <string name="_19_12_2025">NONE</string>
    <string name="other_expense">Other Expenses</string>
    <string name="see_all">See All</string>
    <string name="add_new_expense">Add\nNew Expense</string>
    <string name="label_crate_date">Crate Date</string>
    <string name="dd_mm_yyyy">DD - MM - YYYY</string>
    <string name="label_amount">Amount</string>
    <string name="label_khr">KHR</string>
    <string name="label_usd">USD</string>
    <string name="select_category">Select Category</string>
    <string name="label_category">Category</string>
    <string name="button_add_category">Button Add Category</string>
    <string name="label_remark">Remark</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="des_dollar_symbol">Dollar Symbol</string>
    <string name="tv_view_expense_list">View\nExpense List</string>
    <string name="all_expense">All Expense List</string>
    <string name="todo">TODO</string>
    <string name="spend_smarter_n_save_more">Spend Smarter\n Save More</string>
    <string name="get_start">Get Start</string>
    <string name="welcome_back_glad_to_see_you_again">Welcome back! Glad to see you, Again!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or_login_with">Or Login with</string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="or_register_with">or register with</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="hello_register_to_get_started">Hello! Register to get started</string>
    <string name="transaction_details">Expense Details</string>
    <string name="expense_details">Expense details</string>
    <string name="other_information">Other information :</string>
    <string name="hidden" />
    <string name="no_expenses_yet_let_s_add_your_first_one">No expenses yet!\nLet\'s add your first one</string>
    <string name="add_expense_now">Add Expense Now</string>
    <string name="loading">Loading…</string>
    <string name="add_category">Add Category</string>
    <string name="enter_new_category">Enter new category</string>
    <string name="damn_you_forget_your_password">Damn!! You Forget your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="you_have_exceeded_your_budget">You have exceeded your budget!</string>
    <string name="budget_warning">Budget Warning!</string>
</resources>