<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:id="@+id/header_greeting_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/good_afternoon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/good_afternoon"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/setting"
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_setting_btn"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/button_settings"
                    android:src="@drawable/ico_sign_out" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/card_lastest_expense"
        android:layout_width="375dp"
        android:layout_height="201dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:background="@drawable/card_latest_expense_bg"
        android:elevation="29dp"
        android:outlineProvider="bounds"
        android:clipToOutline="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/tv_latest_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/latest_expense"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/amount"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_below="@id/tv_latest_expense"/>

        <RelativeLayout
            android:id="@+id/category"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/bg_card_category_date"
            android:gravity="center"
            android:layout_below="@id/tv_amount">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/button_settings"
                android:src="@drawable/ico_category" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@id/tv_amount"
            android:layout_toEndOf="@id/category"
            android:layout_marginTop="15dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/tv_category_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/entertainment"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@id/category"
            android:layout_marginTop="6dp"
            android:layout_marginStart="25dp"/>

        <RelativeLayout
            android:id="@+id/date"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="195dp"
            android:background="@drawable/bg_card_category_date"
            android:gravity="center"
            android:layout_below="@id/tv_amount"
            android:layout_toEndOf="@id/category">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:contentDescription="@string/button_settings"
                android:src="@drawable/ico_calendar" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_below="@id/tv_amount"
            android:layout_toEndOf="@id/date"
            android:layout_marginTop="15dp"
            android:layout_marginStart="6dp"/>

        <TextView
            android:id="@+id/tv_date_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/_19_12_2025"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_below="@id/date"
            android:layout_toEndOf="@id/category"
            android:layout_marginTop="6dp"
            android:layout_marginStart="195dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error"
        android:layout_marginTop="400dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_expenses_yet_let_s_add_your_first_one"
                android:gravity="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#438883"/>

            <Button
                android:id="@+id/btn_add_expense_now"
                android:layout_width="331dp"
                android:layout_height="62dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/urbanist_medium"
                android:text="@string/add_expense_now"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_other_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_expense"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/urbanist_medium"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#438883"
        android:layout_marginTop="350dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_some_other_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:layout_marginTop="400dp" />

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:visibility="gone"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="745dp"
        android:text="@string/see_all"
        android:visibility="gone"
        android:textColor="#666666"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:layout_marginStart="185dp"/>

</FrameLayout>
