<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#fbfcf8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_medium"
        android:gravity="start"
        android:text="@string/welcome_back_glad_to_see_you_again"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="127dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextHintStyle"
            android:layout_width="331dp"
            android:layout_height="56dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextHintStyle"
            android:layout_width="331dp"
            android:layout_height="56dp"
            android:layout_marginTop="15dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/forgot_password"
            android:textColor="#6A707C"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_bar"
        android:elevation="26dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:background="#80000000">
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:gravity="center_horizontal"
            android:background="@drawable/card_latest_expense_bg">
            <ProgressBar
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="1dp"
                android:visibility="visible"
                android:indeterminateTint="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_medium"
                android:gravity="center"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:layout_marginTop="100dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_log_in"
        android:layout_width="331dp"
        android:layout_height="62dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/log_in"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_log_in">

        <View
            android:layout_width="112dp"
            android:layout_height="1dp"
            android:background="@drawable/didver_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:fontFamily="@font/urbanist_medium"
            android:text="@string/or_login_with"
            android:textColor="#6A707C"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="112dp"
            android:layout_height="1dp"
            android:background="@drawable/didver_line" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="56dp"
            android:background="@drawable/bg_social_media"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ico_facebook" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_social_media"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ico_google" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_social_media"
            android:gravity="center"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ico_x" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginStart="76dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/dont_have_account"
        android:textColor="#6A707C"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/urbanist_medium"
        android:text="@string/register_now"
        android:textColor="#529C97"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>