<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorOnBackground"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="20dp">

    <RelativeLayout
        android:id="@+id/delete_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end">
        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/bg_circle_deleted"
            tools:ignore="UselessParent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ico_delete" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/foreground_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorOnBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@drawable/bg_dollar_expense_card">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/des_dollar_symbol"
                android:src="@drawable/ico_dollar_on_card" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingHorizontal="9dp">

            <TextView
                android:id="@+id/tv_category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/preahvihear"
                android:text="@string/entertainment"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date_title"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/_19_12_2025"
                android:fontFamily="@font/preahvihear"
                android:textSize="13sp"
                android:textColor="#666666"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_amount_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/preahvihear"
                android:layout_marginEnd="10dp"
                android:text="@string/amount"
                android:textSize="24sp"
                android:textColor="#25A969"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="41dp"
                android:layout_height="41dp"
                android:gravity="center"
                android:background="@drawable/bg_next_btn_card">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/des_dollar_symbol"
                    android:src="@drawable/ico_back_arrow" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    </RelativeLayout>
</FrameLayout>
