<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/damn_you_forget_your_password"
        android:textColor="?attr/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/preahvihear"
        android:layout_marginTop="127dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextHintStyle"
            android:layout_width="331dp"
            android:layout_height="56dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/et_bg"
            android:drawableStart="@drawable/ico_email"
            android:drawablePadding="10dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading_bar"
        android:elevation="26dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:background="#80000000">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/showing_message"
        android:elevation="26dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="#80000000">

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:gravity="center_horizontal"
            android:background="@drawable/card_latest_expense_bg">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="15dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ico_email_sent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/preahvihear"
                android:gravity="center_horizontal"
                android:text="Email sent successfully!"
                android:textColor="@color/white"
                android:layout_marginTop="180dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_go_login"
            android:layout_width="331dp"
            android:layout_height="62dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/preahvihear"
            android:text="@string/log_in"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginTop="325dp"
            android:textColor="@color/white"/>

    </RelativeLayout>


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="331dp"
        android:layout_height="62dp"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/preahvihear"
        android:text="@string/reset_password"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>